--- a/evaluationObject.html
+++ b/evaluationObject.html
@@ -20,16 +20,19 @@
     <div id="body"></div>
     <div id="header">
         <div class="logo">
-            <p></p>
-            <span>智能考评系统</span>
+            <a href="./index.html">
+                <p></p>
+                <span></span>
+            </a>
         </div>
+        <img class="quit" src="images/template/icon-quit.png"/>
     </div>
     <div id="nav">
         <ul>
-            <li><a href="evaluationObject.html"><span></span><p>考评对象</p></a></li>
-            <li><a href="evaluationModel.html"><span></span><p>考评模型</p></a></li>
-            <li><a href="evaluationPlan.html"><span></span><p>考评计划</p></a></li>
-            <li><a href="management.html"><span></span><p>管理</p></a></li>
+            <li><a href="evaluationObject.html"><span class="ic1"></span><p>考评对象</p></a></li>
+            <li><a href="evaluationModel.html"><span class="ic2"></span><p>考评模型</p></a></li>
+            <li><a href="evaluationPlan.html"><span class="ic3"></span><p>考评计划</p></a></li>
+            <li><a href="management.html"><span class="ic4"></span><p>管理</p></a></li>
         </ul>
     </div>
     <div id="content" class="object">
@@ -125,8 +128,8 @@
                     </ul>
                 </div>
                 <div class="itemPic">
-                    <img src="images/template/icon-left.png"/>
                     <img src="images/template/icon-right.png"/>
+                    <img src="images/template/icon-left.png"/>
                 </div>
                 <div class="item">
                     <ul>
