--- a/management.html
+++ b/management.html
@@ -54,8 +54,8 @@
                     <div class="itemCon">
                         <div class="itemList">
                             <div class="itemPic">
-                                <img src="images/template/icon-right1.png"/>
-                                <img src="images/template/icon-left1.png"/>
+                                <img src="images/template/icon-right.png"/>
+                                <img src="images/template/icon-left.png"/>
                             </div>
                             <div class="item">
                                 <p>管理员用户</p>
@@ -66,8 +66,8 @@
                         </div>
                         <div class="itemList">
                             <div class="itemPic">
-                                <img src="images/template/icon-right1.png"/>
-                                <img src="images/template/icon-left1.png"/>
+                                <img src="images/template/icon-right.png"/>
+                                <img src="images/template/icon-left.png"/>
                             </div>
                             <div class="item">
                                 <p>普通用户</p>
@@ -106,4 +106,5 @@
     </div>
 </div>
 </body>
+<script src="js/public.js"></script>
 </html>
