--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="chartTit">
                         <div class="title"><span>考评输出表</span></div>
                         <div class="item">
-                            <a class="color1">今天</a>
+                            <a class="color1 checked">今天</a>
                             <a class="color2">本周</a>
                             <a class="color3">本月</a>
                             <a class="color4">本年度</a>
@@ -131,7 +131,6 @@
     $(function () {
         var myChart = echarts.init(document.getElementById('polyline'));
         var data = [["0",100,10],["200",90,40],["300",34,74],["400",65,83],["500",89,100],["600",100,100],["700",100,100],["800",90,40],["900",90,40],["1000",90,40]];
-        console.log(data)
         var dateList = data.map(function (item) {
             return item[0];
         });
@@ -141,7 +140,7 @@
         var valueList2 = data.map(function (item) {
             return item[2];
         });
-        option = {
+        var option = {
             tooltip: {
                 trigger: 'axis',
             },
@@ -158,9 +157,12 @@
                     boundaryGap: false,
                     axisLine: {
                         lineStyle: {
-                            color: '#4f5459',
+                            color: '#989a9c',
                             width: .5,
                         }
+                    },
+                    splitLine: {
+                        show:true,
                     },
                     axisTick: {
                         show: true,
@@ -168,13 +170,13 @@
                         inside: true,
                         length: 8,
                         lineStyle: {
-                            width: 1,
-                            color: '#4f5459'
+                            width: .5,
+                            color: '#989a9c'
                         }
                     },
                     axisLabel: {
                         color: '#989a9c',
-                        fontSize: 14,
+                        fontSize: 12,
                     },
                     data: dateList,
                 },
@@ -186,34 +188,38 @@
                 },
                 axisLine: {
                     lineStyle: {
-                        color: '#4f5459',
+                        color: '#989a9c',
                         width: .5,
                     }
                 },
                 axisTick: {
-                    show: true,
+                    show: false,
                     alignWithLabel: true,
                     inside: true,
                     length: 8,
                     lineStyle: {
-                        width: 1,
-                        color: '#4f5459'
+                        width: .5,
+                        color: '#989a9c'
                     }
                 },
                 axisLabel: {
                     color: '#989a9c',
-                    fontSize: 14
+                    fontSize: 12
                 },
             }],
             series: [{
                 name: '实际值',
                 type: 'line',
                 symbol: 'none',
+                smooth: true,
                 animationDuration: 2000,
                 lineStyle: {
                     normal: {
-                        color: "#00e6c8",
-                        width: 2,
+                        color: "#482afe",
+                        width: 3,
+                        shadowColor: 'rgba(72,42,254,0.5)',
+                        shadowBlur: 10,
+                        shadowOffsetY: 15
                     }
                 },
                 data: valueList,
@@ -223,53 +229,34 @@
                         color: '#fff',
                     }
                 },
-                areaStyle: {
-                    normal: {
-                        color: new echarts.graphic.LinearGradient(0, 0, 0, 1, [{
-                            offset: 0,
-                            color: '#00e6c8'
-                        }, {
-                            offset: 1,
-                            color: '#7c3ffb'
-                        }])
-                    }
-                },
             }, {
                 name: '理论值',
                 type: 'line',
                 symbol: 'none',
+                smooth: true,
                 animationDuration: 2000,
                 lineStyle: {
                     normal: {
-                        color: "#845ec2",
-                        type: 'dashed',
-                        opacity:0
+                        color: "#ff0179",
+                        width: 3,
+                        shadowColor: 'rgba(233,32,118,0.5)',
+                        shadowBlur: 10,
+                        shadowOffsetY: 15
                     }
                 },
                 data: valueList2,
-                areaStyle: {
-                    normal: {
-                        color: new echarts.graphic.LinearGradient(0, 0, 0, 1, [{
-                            offset: 0,
-                            color: '#b47efb'
-                        }, {
-                            offset: 1,
-                            color: '#7c3ffb'
-                        }])
-                    }
-                },
             }]
         };
-        myChart.setOption(option);
+        myChart.setOption(option,true);
     })
     /*进度*/
     $(".circleChart#0").circleChart({
         size: 170,
         value: 30,
-        innerColorStart: "#00e6c8",
-        innerColorEnd: "#00e6c8",
-        color: "#00e6c8",
-        backgroundColor: "#454755",
+        innerColorStart: "#482afe",
+        innerColorEnd: "#482afe",
+        color: "#482afe",
+        backgroundColor: "#f1f1f1",
         text: 0,
         textSize: 22,
         textWeight: 600,
@@ -280,9 +267,7 @@
     /*柱状图*/
     $(function () {
         var myChart = echarts.init(document.getElementById('rect'));
-        var data = [["0",100,10],["200",90,40],["300",34,74],["400",65,83]];
-        var myColor = ['#ae7efa','#00e6c8'];
-        option = {
+        var option = {
             tooltip: {
                 trigger: 'axis',
                 axisPointer: {
@@ -300,49 +285,61 @@
                 boundaryGap: [0, 0.01],
                 axisLabel: {
                     color: '#989a9c',
-                    fontSize: 14,
+                    fontSize: 12,
                 },
                 splitLine: {
                     show:false,
+                },
+                axisLine: {
+                    lineStyle: {
+                        color: '#eaeaea',
+                        width: .5,
+                    }
                 },
             },
             yAxis: {
                 type: 'category',
                 axisLabel: {
                     color: '#989a9c',
-                    fontSize: 14
+                    fontSize: 12
                 },
                 offset: 80,
+                axisLine: {
+                    lineStyle: {
+                        color: '#eaeaea',
+                        width: .5,
+                    }
+                },
             },
             series: [
                 {
-                    name: '2011年',
                     type: 'bar',
                     data: [182, 234, 290, 104, 131, 302],
                     itemStyle: {
                         normal: {
-                            color: function(params) {
-                                var num = myColor.length;
-                                return myColor[params.dataIndex % num]
-                            }
+                            color: new echarts.graphic.LinearGradient(
+                                0, 0, 1, 1,
+                                [
+                                    {offset: 0, color: 'rgba(49,83,254,.5)'},
+                                    {offset: 1, color: 'rgba(255,255,255,.5)'}
+                                ]
+                            )
+                        },
+                        emphasis: {
+                            color: new echarts.graphic.LinearGradient(
+                                0, 0, 1, 1,
+                                [
+                                    {offset: 0, color: 'rgba(49,83,254,1)'},
+                                    {offset: 1, color: 'rgba(255,255,255,1)'}
+                                ]
+                            )
                         }
                     },
                     barWidth:40
                 },
-                /*{
-                    name: '2012年',
-                    type: 'bar',
-                    data: [19325, 23438, 31000, 121594, 134141, 681807],
-                    itemStyle: {
-                        normal: {
-                            color: "#00e6c8",
-                        }
-                    },
-                    barWidth:40
-                }*/
             ]
         };
-        myChart.setOption(option);
+        myChart.setOption(option,true);
     })
 </script>
 </html>
