--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/template.css">
     <link rel="stylesheet" href="css/index.css">
     <script src="js/jquery-2.2.3.min.js"></script>
+    <script src="js/public.js"></script>
 </head>
 <body>
 <div id="main">
@@ -53,6 +54,9 @@
                 <img id="icon_nav" src="images/template/icon-nav.png"/>
                 <ul>
                     <li class="check"><a href="index.html">首页</a></li>
+                </ul>
+                <ul class="hide">
+                    <li><a href="index.html#tpye=collapse">首页</a></li>
                 </ul>
             </div>
             <div class="quit"><img src="images/template/icon-quit.png"/></div>
@@ -147,7 +151,6 @@
     </div>
 </div>
 </body>
-<script src="js/public.js"></script>
 <script src="js/echarts.min.js"></script>
 <script src="js/circleChart.js"></script>
 <script>
