--- a/evaluationModel.html
+++ b/evaluationModel.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/template.css">
     <link rel="stylesheet" href="css/evaluationModel.css">
     <script src="js/jquery-2.2.3.min.js"></script>
+    <script src="js/public.js"></script>
 </head>
 <body>
 <div id="main">
@@ -55,6 +56,11 @@
                     <li><a href="index.html">首页</a></li>
                     <li><span>/</span></li>
                     <li class="check"><a href="evaluationModel.html">考评模型</a></li>
+                </ul>
+                <ul class="hide">
+                    <li><a href="index.html#tpye=collapse">首页</a></li>
+                    <li><span>/</span></li>
+                    <li class="check"><a href="evaluationModel.html#tpye=collapse">考评模型</a></li>
                 </ul>
             </div>
             <div class="quit"><img src="images/template/icon-quit.png"/></div>
@@ -232,5 +238,4 @@
     </div>
 </div>
 </body>
-<script src="js/public.js"></script>
 </html>
