--- a/evaluationPlan.html
+++ b/evaluationPlan.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/template.css">
     <link rel="stylesheet" href="css/evaluationPlan.css">
     <script src="js/jquery-2.2.3.min.js"></script>
+    <script src="js/public.js"></script>
 </head>
 <body>
 <div id="main">
@@ -55,6 +56,11 @@
                     <li><a href="index.html">首页</a></li>
                     <li><span>/</span></li>
                     <li class="check"><a href="evaluationPlan.html">考评计划</a></li>
+                </ul>
+                <ul class="hide">
+                    <li><a href="index.html#tpye=collapse">首页</a></li>
+                    <li><span>/</span></li>
+                    <li class="check"><a href="evaluationPlan.html#tpye=collapse">考评计划</a></li>
                 </ul>
             </div>
             <div class="quit"><img src="images/template/icon-quit.png"/></div>
@@ -153,7 +159,6 @@
 
 </div>
 </body>
-<script src="js/public.js"></script>
 <script src="js/jquery-clock-timepicker.min.js"></script>
 <script type="text/javascript">
     $(document).ready(function() {
