--- a/management.html
+++ b/management.html
@@ -17,54 +17,30 @@
 </head>
 <body>
 <div id="main">
-    <div id="nav">
+    <div id="header">
         <div class="logo">
             <a href="./index.html">
                 <p></p>
                 <span></span>
             </a>
         </div>
-        <div class="logo hide">
-            <a href="./index.html#tpye=collapse">
-                <span></span>
-            </a>
-        </div>
+        <div class="quit"><img src="images/template/icon-quit.png"/></div>
+    </div>
+    <div id="nav">
         <ul>
             <li>
-                <div class="first"><span class="ic1"></span><a href="evaluationObject.html">考评对象</a></div>
-                <div class="item"><a href="evaluationObject.html#tpye=collapse">考评对象</a></div>
+                <a href="evaluationObject.html"><div class="first"><span class="ic1"></span>考评对象</div></a>
             </li>
             <li>
-                <div class="first"><span class="ic2"></span><a href="evaluationModel.html">考评模型</a></div>
-                <div class="item"><a href="evaluationModel.html#tpye=collapse">考评模型</a></div>
+                <a href="evaluationModel.html"><div class="first"><span class="ic2"></span>考评模型</div></a>
             </li>
             <li>
-                <div class="first"><span class="ic3"></span><a href="evaluationPlan.html">考评计划</a></div>
-                <div class="item"><a href="evaluationPlan.html#tpye=collapse">考评计划</a></div>
+                <a href="evaluationPlan.html"><div class="first"><span class="ic3"></span>考评计划</div></a>
             </li>
-            <li class="checked">
-                <div class="first"><span class="ic4"></span><a href="management.html">管理</a></div>
-                <div class="item"><a href="management.html#tpye=collapse">管理</a></div>
+            <li>
+                <a href="management.html"><div class="first"><span class="ic4"></span>管理</div></a>
             </li>
         </ul>
-    </div>
-    <div id="header">
-        <div class="crumbsNav">
-            <div class="itemNav">
-                <img id="icon_nav" src="images/template/icon-nav.png"/>
-                <ul>
-                    <li><a href="index.html">首页</a></li>
-                    <li><span>/</span></li>
-                    <li class="check"><a href="management.html">管理</a></li>
-                </ul>
-                <ul class="hide">
-                    <li><a href="index.html#tpye=collapse">首页</a></li>
-                    <li><span>/</span></li>
-                    <li class="check"><a href="management.html#tpye=collapse">管理</a></li>
-                </ul>
-            </div>
-            <div class="quit"><img src="images/template/icon-quit.png"/></div>
-        </div>
     </div>
     <div id="content" class="management">
         <div class="layout">
