--- a/evaluationModel.html
+++ b/evaluationModel.html
@@ -14,34 +14,12 @@
     <link rel="stylesheet" href="css/template.css">
     <link rel="stylesheet" href="css/evaluationModel.css">
     <script src="js/jquery-2.2.3.min.js"></script>
+    <script src="js/vue.js"></script>
+    <script type="text/javascript" src="js/nav.js"></script>
 </head>
 <body>
 <div id="main">
-    <div id="header">
-        <div class="logo">
-            <a href="./index.html">
-                <p></p>
-                <span></span>
-            </a>
-        </div>
-        <div class="quit"><img src="images/template/icon-quit.png"/></div>
-    </div>
-    <div id="nav">
-        <ul>
-            <li>
-                <a href="evaluationObject.html"><div class="first"><span class="ic1"></span>考评对象</div></a>
-            </li>
-            <li>
-                <a href="evaluationModel.html"><div class="first"><span class="ic2"></span>考评模型</div></a>
-            </li>
-            <li>
-                <a href="evaluationPlan.html"><div class="first"><span class="ic3"></span>考评计划</div></a>
-            </li>
-            <li>
-                <a href="management.html"><div class="first"><span class="ic4"></span>管理</div></a>
-            </li>
-        </ul>
-    </div>
+    <div id="head"><common-head></common-head></div>
     <div id="content" class="model">
         <div class="layout">
             <div class="title">
@@ -50,7 +28,7 @@
             </div>
             <div class="modelCon">
                 <div class="item">
-                    <div class="itemCon"><p>日评模型</p></div>
+                    <div class="itemCon flex"><em></em><p>日评模型</p></div>
                     <div class="checkList">
                         <input type="checkbox" class="checkbox" id="start1"><label for="start1"><img src="images/template/icon-check.png" alt=""></label>
                         <p>启用</p>
@@ -90,7 +68,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="itemCon"><p>周评模型</p></div>
+                    <div class="itemCon flex"><em></em><p>周评模型</p></div>
                     <div class="checkList">
                         <input type="checkbox" class="checkbox" id="start2"><label for="start2"><img src="images/template/icon-check.png" alt=""></label>
                         <p>启用</p>
@@ -130,7 +108,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="itemCon"><p>月评模型</p></div>
+                    <div class="itemCon flex"><em></em><p>月评模型</p></div>
                     <div class="checkList">
                         <input type="checkbox" class="checkbox" id="start3"><label for="start3"><img src="images/template/icon-check.png" alt=""></label>
                         <p>启用</p>
@@ -170,7 +148,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="itemCon"><p>日评模型</p></div>
+                    <div class="itemCon flex"><em></em><p>年评模型</p></div>
                     <div class="checkList">
                         <input type="checkbox" class="checkbox" id="start4"><label for="start1"><img src="images/template/icon-check.png" alt=""></label>
                         <p>启用</p>
