--- a/evaluationPlan.html
+++ b/evaluationPlan.html
@@ -14,34 +14,12 @@
     <link rel="stylesheet" href="css/template.css">
     <link rel="stylesheet" href="css/evaluationPlan.css">
     <script src="js/jquery-2.2.3.min.js"></script>
+    <script src="js/vue.js"></script>
+    <script type="text/javascript" src="js/nav.js"></script>
 </head>
 <body>
 <div id="main">
-    <div id="header">
-        <div class="logo">
-            <a href="./index.html">
-                <p></p>
-                <span></span>
-            </a>
-        </div>
-        <div class="quit"><img src="images/template/icon-quit.png"/></div>
-    </div>
-    <div id="nav">
-        <ul>
-            <li>
-                <a href="evaluationObject.html"><div class="first"><span class="ic1"></span>考评对象</div></a>
-            </li>
-            <li>
-                <a href="evaluationModel.html"><div class="first"><span class="ic2"></span>考评模型</div></a>
-            </li>
-            <li>
-                <a href="evaluationPlan.html"><div class="first"><span class="ic3"></span>考评计划</div></a>
-            </li>
-            <li>
-                <a href="management.html"><div class="first"><span class="ic4"></span>管理</div></a>
-            </li>
-        </ul>
-    </div>
+    <div id="head"><common-head></common-head></div>
     <div id="content" class="plan">
         <div class="layout">
             <div class="title">
