--- a/evaluationModel.html
+++ b/evaluationModel.html
@@ -24,7 +24,7 @@
         <div class="layout">
             <div class="title">
                 <span>考评模型管理</span>
-                <a class="btn" onclick="$('#addObject').show()">保存</a>
+                <a class="btn">保存</a>
             </div>
             <div class="modelCon">
                 <div class="item">
@@ -192,5 +192,6 @@
     </div>
 </div>
 <script src="js/public.js"></script>
+<script src="js/evaluationModel.js"></script>
 </body>
 </html>
