--- a/evaluationObject.html
+++ b/evaluationObject.html
@@ -39,7 +39,7 @@
                                 <p>{{item.name}}</p>
                             </div>
                             <div class="itemRight">
-                                <img v-on:click="addSubList(index,0)" src="images/template/icon-add.png"/>
+                                <img v-on:click="addSubList(-1,index,0)" src="images/template/icon-add.png"/>
                                 <img v-on:click="addObjectFuc(index)" src="images/template/icon-change.png"/>
                                 <img v-on:click="delList(index)" src="images/template/icon-del.png"/>
                             </div>
