--- a/evaluationPlan.html
+++ b/evaluationPlan.html
@@ -29,7 +29,7 @@
             <div class="checkCon">
                 <div class="checkItem">
                     <div class="checkList checked">
-                        <input type="checkbox" checked="checked" class="checkbox" id="day"><label for="day"><img src="images/template/icon-check.png" alt=""></label>
+                        <input type="checkbox" class="checkbox" id="day"><label for="day"><img src="images/template/icon-check.png" alt=""></label>
                         <p>每日</p>
                     </div>
                     <div class="itemTime"><span>时间：</span><input class="time" type="text"/></div>
@@ -51,7 +51,7 @@
                 </div>
                 <div class="checkItem">
                     <div class="checkList checked">
-                        <input type="checkbox" checked="checked" class="checkbox" id="week"><label for="week"><img src="images/template/icon-check.png" alt=""></label>
+                        <input type="checkbox" class="checkbox" id="week"><label for="week"><img src="images/template/icon-check.png" alt=""></label>
                         <p>每周</p>
                     </div>
                     <div class="itemTime"><span>时间：</span><input class="time" type="text"/></div>
@@ -93,7 +93,7 @@
                 </div>
                 <div class="checkItem">
                     <div class="checkList checked">
-                        <input type="checkbox" checked="checked" class="checkbox" id="mount"><label for="mount"><img src="images/template/icon-check.png" alt=""></label>
+                        <input type="checkbox" class="checkbox" id="mount"><label for="mount"><img src="images/template/icon-check.png" alt=""></label>
                         <p>每月</p>
                     </div>
                     <div class="itemTime"><span>时间：</span><input class="time" type="text"/></div>
