--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div id="head"><common-head></common-head></div>
     <div id="content" class="index">
         <div class="leftCon">
-            <div class="conList">
-                <div class="layout">
+            <div class="conList" id="waring">
+                <!--<div class="layout">
                     <div class="item">
                         <p><span>153</span>服务器</p>
                         <img src="images/index/icon1.png"/>
@@ -74,7 +74,7 @@
                             <li><img src="images/index/icon14.png"/><p>140</p></li>
                         </ul>
                     </div>
-                </div>
+                </div>-->
             </div>
             <div class="listCon">
                 <div class="tabCon">
@@ -91,14 +91,14 @@
                                     <th>物联网设备</th>
                                 </tr>
                                 </thead>
-                                <tbody>
-                                <tr>
+                                <tbody id="table">
+                                <!--<tr>
                                     <td>大数据治理应用平台</td>
                                     <td><span class="green"></span>0/3</td>
                                     <td><span class="green"></span>0/3</td>
                                     <td><span class="red"></span>1/3</td>
                                     <td><span class="green"></span>0/3</td>
-                                </tr>
+                                </tr>-->
                                 </tbody>
                             </table>
                         </div>
@@ -185,12 +185,12 @@
                                 <th>标题</th>
                             </tr>
                             </thead>
-                            <tbody>
-                            <tr>
+                            <tbody id="alarms">
+                            <!--<tr>
                                 <td>1</td>
                                 <td>18:18</td>
                                 <td><span class="green"></span>大数据治理应用平台</td>
-                            </tr>
+                            </tr>-->
                             </tbody>
                         </table>
                     </div>
@@ -202,7 +202,11 @@
 </body>
 <script src="js/public.js"></script>
 <script src="js/circle.js"></script>
+<script src="js/index.js"></script>
 <script>
+    $.initWaring();
+    $.initModeAnaly();
+    $.initAlarms();
     $(function (){
         var docHeight=document.documentElement.clientHeight;
         $(".tabCon table,.rankList").css("max-height",docHeight-340);
